kubernetes/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: crud.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: crud-backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-frontend
            port:
              number: 80
